--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.3",
+    "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.0",
-    "framer-motion": "^11.0.3",
-    "lucide-react": "^0.344.0",
-    "zustand": "^4.5.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
@@ -35,4 +36,3 @@
     "vitest": "^1.3.1"
   }
 }
-
